--- a/Sem05/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Sem05/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -99,7 +99,7 @@ NewWindowPosition=(X=-1,Y=-1)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
-BuildGameBeforeLaunch=PlayOnBuild_Default
+BuildGameBeforeLaunch=PlayOnBuild_Never
 LaunchConfiguration=LaunchConfig_Default
 PackFilesForLaunch=NoPak
 bAutoCompileBlueprintsOnLaunch=True
@@ -242,4 +242,23 @@ Project=C:/Program Files/Epic Games/UE_5.3/
 
 [MessageLog]
 LastLogListing=LoadErrors
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.PathTracing=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.WorldPartition=True
+StaticMeshActor.Actor=True
 
